--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="description" content="page description here">
 <meta http-equiv="content-type" content="text/html"; charset="UTF-8">
-<meta name="Viewport" content="width=devuce-width, initial-scale=1">>
+<meta name="Viewport" content="width=devuce-width, initial-scale=1">
 <title>Coders Foundation Online forum.</title>
 
 </head>
