--- a/signup.html
+++ b/signup.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en-US">
 <head>
-	<meta charset="UTF-8">
-	<title>Coders Foundation Online forum.</title>
+<meta name="description" content="page description here">
+<meta http-equiv="content-type" content="text/html"; charset="UTF-8">
+<meta name="Viewport" content="width=devuce-width, initial-scale=1">
+<title>Coders Foundation Online forum.</title>
 
 </head>
 	<body>
