--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
 
 		<cite><mark>This login page has created for testing purpose, so i am using both gmail and username</mark></cite><br><br><br>
 
-		<forme action="3" method="POST">
+		<forme action="#" method="POST">
 
 			<b>Username</b><br>
 			<input type="text" placeholder="@emaple" size="25" required/><br><br>
