--- a/signup.html
+++ b/signup.html
@@ -23,7 +23,7 @@
 		<h1>Signup</h1>
 		<p>It's free and always will</p>
 
-		<forme action="3" method="POST">
+		<forme action="#" method="POST">
 
 			<b>First Name</b><br>
 			<input type="text" placeholder="Enter Your First Name" size="25" required/><br><br>
