--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<form action="login.html" target="_blank" method="POST">
 			<fieldset>
 
-				<br><input type="submit" value="Login" size="50" maxlength="4"/><br>
+				<br><input type="submit" value="Login" size="50" /><br>
 
 
 				<p>New here?<br>Lets <a href="signup.html" target="_blank"><b>Signup or Create an account</b></a> for free.</p>
