--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta name="description" content="page description here">
 <meta http-equiv="content-type" content="text/html"; charset="UTF-8">
 <meta name="Viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <title>Coders Foundation Online forum.</title>
 
 </head>
@@ -22,7 +22,7 @@
 			<a href="contact.html" target="_blank">Contact</a>
 		</nav> <br><br>
 
-		<form action="login.html" target="_blank" method="POST">
+		<form action="login.html" target="_blank" method="GET">
 			<fieldset>
 
 				<br><input type="submit" value="Login" size="50" /><br>
