--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta name="description" content="page description here">
 <meta http-equiv="content-type" content="text/html"; charset="UTF-8">
 <meta name="Viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 <title>Coders Foundation Online forum.</title>
 
 </head>
@@ -22,7 +22,7 @@
 			<a href="contact.html" target="_blank">Contact</a>
 		</nav> <br><br>
 
-		<form action="login.html" target="_blank" method="GET">
+		<form action="login.html" target="_blank" method="POST">
 			<fieldset>
 
 				<br><input type="submit" value="Login" size="50" /><br>
@@ -30,13 +30,27 @@
 
 				<p>New here?<br>Lets <a href="signup.html" target="_blank"><b>Signup or Create an account</b></a> for free.</p>
 			</fieldset>
-		</form>
+		</form><br><br><br>
+		
+		<div style="text-align: left">
+		
+			<p><h2> Table of Contents:</h2></p>
+		
+			<ol>
+				<li><a href="#article1">Article-1</a></li>
+				<li><a href="#article2">Article-2</a></li>
+				<li><a href="#article3">Article-3</a></li>
+				<li><a href="#video">Videos</a></li>
+		
+			</ol>
+		
+		</div>
   
                 <h2>Web Developer</h2>
                 <p>Hello World!</p>
 
 		<div style="text-align: left">
-			<h2>Starting Freenancing careear with fiver</h2>
+			<h2><a id="article1"></a>Starting Freenancing careear with fiver</h2>
 			<p> <b>What is Fiver and how does it work?</b></p>
 			<img border="0" src="fiver.png" align="left" width="609"><blockquote>Fiverr is a marketplace that connects buyers and sellers. For examples, buyers look for services within a lot of categories like music and audio, video and animation and others. Meanwhile, seller are the people offering those services. So, they create Gigs that buyers pay forFiverr was founded by Micha Kaufman and Shai Wininger, and was launched in February 2010. The founders came up with the concept of a marketplace that would provide a two sided platform for people to buy and sell a variety of digital services typically offered by freelance contractors. Services offered on the site include writing, translation, graphic design, video editing and programming.<del>[4][5][6]</del> <mark>Fiverr's services start at US$5</mark>, and can go up to thousands of dollars with gig extras. Each service offered is called a "gig".[7]<br>
 The website was launched in early 2010 and by 2012 was hosting over 1.3 million Gigs.[8]<br> The website transaction volume has <ins>grown 600% since 2011</ins>. Additionally, Fiverr.com has been ranked among the top 100 most popular sites in the United States and top 200 in the world since the beginning of 2013.[9]<br>
@@ -58,7 +72,7 @@ In June 2019, it listed on NYSE.[15]...<a href="https://en.wikipedia.org/wiki/Co
 <br>
 
 		<div style="text-align: left">
-			<h2>How to Start a Successful Blog [Tips & Tricks]</h2>
+			<h2><a id="article2"></a>How to Start a Successful Blog [Tips & Tricks]</h2>
 			<p><b>What is Blog?</b></p>
 			<img border="0" src="img1.jpg" align="right">A blog (a truncation of "weblog")[1] is a discussion or informational website published on the World Wide Web consisting of discrete, often informal diary-style text entries (posts). Posts are typically displayed in reverse chronological order, so that the most recent post appears first, at the top of the web page. Until 2009, blogs were usually the work of a single individual,[citation needed] occasionally of a small group, and often covered a single subject or topic. In the 2010s, "multi-author blogs" (MABs) emerged, featuring the writing of multiple authors and sometimes professionally edited. MABs from newspapers, other media outlets, universities, think tanks, advocacy groups, and similar institutions account for an increasing quantity of blog traffic. The rise of Twitter and other "microblogging" systems helps integrate MABs and single-author blogs into the news media. Blog can also be used as a verb, meaning to maintain or add content to a blog.
 
@@ -72,7 +86,7 @@ On February 16, 2011, there were over 156 million public blogs in existence. On 
 		</div><br>
 
 		<div style="text-align: left">
-			<h2>Stay Home & Stay Safe</h2>
+			<h2><a id="article3"></a>Stay Home & Stay Safe</h2>
 			<p><b>What is Corona Virus and why should we stay home?</b></p>
 			<img border="0" src="corona.jpg" align="left" width="609"><blockquote>Coronavirus disease 2019 (COVID-19) is an infectious disease caused by severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2).[7] The disease was first identified in December 2019 in Wuhan, the capital of China's Hubei province, and has since spread globally, resulting in the ongoing 2019–20 coronavirus pandemic.[8][9] Common symptoms include fever, cough, and shortness of breath.[4] <br><br>
 Other symptoms may include fatigue, muscle pain, diarrhea, sore throat, loss of smell, and abdominal pain.[4][10][11] The time from exposure to onset of symptoms is typically around five days but may range from two to fourteen days.[4][12] While the majority of cases result in mild symptoms, some progress to viral pneumonia and multi-organ failure.[8][13] As of 16 April 2020, more than 2.06 million cases have been reported across 210 countries and territories,[14] resulting in more than 137,000 deaths. More than 512,000 people have recovered.[6]<br><br>
@@ -94,7 +108,7 @@ The World Health Organization (WHO) declared the 2019–20 coronavirus outbreak 
 
 
 		<div style="text-align: center">
-			<h2><b>Some Videos about Corona Awareness.</b></h2>
+			<h2><a id="video"></a><b>Some Videos about Corona Awareness.</b></h2>
 			<p><b>Lets watch some short videos and create awarness about corona virus</b></p>
 			<video controls width="600" height="300">
 				<source src="corona_1.mp4" type="video/mp4">			
