--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="content-type" content="text/html"; charset="UTF-8">
 <meta name="Viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <title>Coders Foundation Online forum.</title>
 
 </head>
