--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<a href="contact.html" target="_blank">Contact</a>
 		</nav> <br><br>
 
-		<form action="login.html" target="_blank" method="POST">
+		<form action="login.html" target="_blank" method="GET">
 			<fieldset>
 
 				<br><input type="submit" value="Login" size="50" /><br>
