--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta name="description" content="page description here">
 <meta http-equiv="content-type" content="text/html"; charset="UTF-8">
 <meta name="Viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 <title>Coders Foundation Online forum.</title>
 
 </head>
@@ -149,6 +149,7 @@ The World Health Organization (WHO) declared the 2019–20 coronavirus outbreak 
 			<li>Depends on clients requirment</li>
 		</div>
 
+<br>
                 <span>&copy;Coders Foundation Online Forum@2020.</span>
 	</footer>
 
