--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<br><input type="submit" value="Login" size="50" /><br>
 
 
-				<p>New here?<br>Lets <button><a href="signup.html" target="_blank"><b>Signup</b></a></button> for free.</p>
+				<p>New here?<br>Lets <a href="signup.html" target="_blank"><b>Create and account or Signup</b></a> for free.</p>
 			</fieldset>
 		</form><br><br><br>
 		
